--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "body-parser": "^1.20.3",
     "copy-webpack-plugin": "^13.0.0",
